--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     color: #FF136F
 }
 .buy-now-button{
-    background-image: linear-gradient(to bottom, #FF136F 100%);
+    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
     color: #fff;
     order: none;
     border-radius: 8px;
